# azure-rag-playground

./: .env.example  .gitignore  FAQ.md  README.md  pyproject.toml  streamlit.py
app/: azure_search_setup.py  cache.py  config.py  file_processing.py  llm.py  pipeline.py  search.py
app/azure_search/: azure_ai_search.md  datasource_setup.py  index_setup.py  indexer_setup.py  skillset_setup.py
app/rag_search/: __init__.py  embedding.py  faiss_index.py  file_preprocess.py  processing_flow.md  research.md
